apps/cyberchef/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyberchef
  namespace: cyberchef
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "CyberChef"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "cyberchef.png"
    gethomepage.dev/description: "Data wrangling"
spec:
  parentRefs:
    - name: cilium-gateway-local
      namespace: network
      sectionName: https-cyberchef
  hostnames:
    - cyberchef.stevevaradi.me
  rules:
    - backendRefs:
        - name: cyberchef
          port: 8000
